# kbo-lookalike

./: .gitignore  CLAUDE.md  README.md  kbo_crawling.ipynb  main.py
.github/workflows/: crawl-relay.yml
admin-console/: index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
admin-console/src/: index.css  main.tsx  router.tsx
admin-console/src/constants/: teams.ts
admin-console/src/lib/: cloudflare.ts
admin-console/src/pages/: dashboard.tsx  schedule-date.tsx
data/metadata/: kbo_players.csv  player_metadata.json
data/schedule/: kbo_2026.json
docs/: realtime-score-plan.md
python/: compute_centroids.py  crawl_relay.py  crawl_schedule.py  gallery_expansion.ipynb  kbo_crawling.ipynb  pyproject.toml  update_schedule_kv.py  upload_schedule_to_kv.py
web/: .env.development  .env.production  .gitignore  .prettierignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
web/functions/api/: schedule.ts  today.ts
web/public/: _headers  _redirects
web/scripts/: copy-wasm.mjs
web/src/: index.css  main.tsx  router.tsx
web/src/constants/: analysis-messages.ts
web/src/context/: app-state-context.tsx
web/src/hooks/: use-animated-number.ts  use-face-pipeline.ts  use-month-schedule.ts  use-player-align.ts  use-schedule.ts
web/src/lib/: image-utils.ts  session-storage.ts  share-card.ts
web/src/ml/: arcface.ts  asset-url.ts  classify.ts  face-align.ts  face-crop.ts  ort-session.ts  pipeline.ts  preload.ts  scrfd.ts  similarity.ts
web/src/pages/: about.tsx  home.tsx  landing.tsx  result.tsx  (+2 more)
(+33 files in other folders)
