[project]
name = "kbo-lookalike"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.35.0",
    "beautifulsoup4>=4.14.3",
    "insightface>=0.7.3",
    "numpy>=2.0.2",
    "onnxruntime>=1.20.1",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.9.4",
]
